@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-18T01:09:51Z",
-  "count_outdated" : 4785,
-  "uniques_outdated" : 1382,
+  "timestamp" : "2023-07-18T08:11:06Z",
+  "count_outdated" : 4787,
+  "uniques_outdated" : 1384,
   "count" : 4861,
   "uniques" : 1430,
   "clones" : [
-    {
-      "timestamp": "2023-07-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-07-07T00:00:00Z",
       "count": 1,
