@@ -1,12 +1,7 @@
 {
-  "count": 76,
-  "uniques": 38,
+  "count": 74,
+  "uniques": 36,
   "clones": [
-    {
-      "timestamp": "2023-07-04T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-07-07T00:00:00Z",
       "count": 1,
